--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "nu-html-checker": "^0.1.0",
-    "onchange": "^5.2.0"
+    "onchange": "^5.2.0",
+    "stylelint": "^11.1.1",
+    "stylelint-scss": "^3.11.1"
   }
 }
